--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ english_module/Models
 marathi_module/Models
 communication_module/Data
 communication_module/Models
+english_module/__pycache__
+marathi_module/__pycache__
+communication_module/__pycache__
