Change Model path

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ communication_module/__pycache__
 communication_module/Colab Notebooks/Logs
 communication_module/Colab Notebooks/MP_Data
 communication_module/Colab Notebooks/0.npy
-
+communication_module/Colab Notebooks/Communication.h5
